Fix centering on mobile

--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -480,8 +480,7 @@ nav > ul li a:active {
 	flex-direction: column;
 	align-items: center;
 	margin-top: 93px;
-	
-	font-weight: bold;
+	text-align: center;
 	align-self: center;
 }
 
@@ -563,7 +562,7 @@ nav > ul li a:active {
 
 	.features-header {
 		margin-top: 50px;
-		margin-bottom: 30px;
+		margin-bottom: 50px;
 	}
 
 	.features {
@@ -606,7 +605,8 @@ nav > ul li a:active {
 	}
 
 	.features-header {
-		margin-top: 11px;
+		margin-top: 50px;
+		margin-bottom: 50px;
 	}
 
 	.features {
